--- a/src/pages/guidelines/pictograms/usage.mdx
+++ b/src/pages/guidelines/pictograms/usage.mdx
@@ -79,9 +79,17 @@ become an elegant addition to the IBM experience.
 
 ## Productive versus expressive
 
-Productive and expressive pictograms are two distinct types of artwork that work best in different contexts. Productive pictograms are the go-to pictogram type for most contexts; they work across a variety of scales and environments whether physical or digital. They're illustrative and simple, allowing for one or many to be used to convey complex ideas.
+Productive and expressive pictograms are two distinct types of artwork that work
+best in different contexts. Productive pictograms are the go-to pictogram type
+for most contexts; they work across a variety of scales and environments whether
+physical or digital. They're illustrative and simple, allowing for one or many
+to be used to convey complex ideas.
 
-Expressive pictograms represent a more dynamic option to the standard pictogram, using gradients, layering and transparency to build a sense of depth and movement in the artwork. Due to their visual complexity, expressive pictograms should be used selectively and only in scenarios that call for a graphic with strong presence.
+Expressive pictograms represent a more dynamic option to the standard pictogram,
+using gradients, layering and transparency to build a sense of depth and
+movement in the artwork. Due to their visual complexity, expressive pictograms
+should be used selectively and only in scenarios that call for a graphic with
+strong presence.
 
 <ArtDirection>
 
@@ -243,7 +251,8 @@ on 1/4 of the scaled grid size. The padding can be increased by increments of
 </ArtDirection>
 
 <Caption>
-  Padding and spacing rules apply whether using pictograms with or without containers.
+  Padding and spacing rules apply whether using pictograms with or without
+  containers.
 </Caption>
 
 <ArtDirection>
@@ -335,7 +344,9 @@ exceed values 10–20.
 
 ### Expressive pictogram color
 
-Expressive pictograms have four color themes: dark, light, monochromatic dark, and monochromatic light. To ensure accessibility, use the color theme that corresponds with the pictogram’s background color.
+Expressive pictograms have four color themes: dark, light, monochromatic dark,
+and monochromatic light. To ensure accessibility, use the color theme that
+corresponds with the pictogram’s background color.
 
 <ArtDirection>
 
@@ -344,12 +355,12 @@ Expressive pictograms have four color themes: dark, light, monochromatic dark, a
 
 </ArtDirection>
 
-| Background color value | Pictogram theme                   |
-| ---------------------- | --------------------------------- |
-| White, 10–20           | Light                             |
-| 30–50                  | Monochromatic light (Black)       |
-| 50–70                  | Monochromatic dark (White)        |
-| 80–100, Black          | Dark                              |
+| Background color value | Pictogram theme             |
+| ---------------------- | --------------------------- |
+| White, 10–20           | Light                       |
+| 30–50                  | Monochromatic light (Black) |
+| 50–70                  | Monochromatic dark (White)  |
+| 80–100, Black          | Dark                        |
 
 <DoDontRow>
 <DoDont caption="Use dark-theme pictograms on dark backgrounds and light-theme pictograms on light backgrounds.">
@@ -417,4 +428,3 @@ Expressive pictograms have four color themes: dark, light, monochromatic dark, a
 </ImageGalleryImage>
 
 </ImageGallery>
-
