--- a/src/pages/community/domain-guidance.mdx
+++ b/src/pages/community/domain-guidance.mdx
@@ -1,15 +1,16 @@
 ---
 title: Domain guidance
 description:
-  These sites within the Carbon community include guidance, assets, and resources for all of IBM's digital
-  experiences from product to website. Some guidance is accessible to IBMers
-  only.
+  These sites within the Carbon community include guidance, assets, and
+  resources for all of IBM's digital experiences from product to website. Some
+  guidance is accessible to IBMers only.
 ---
 
 <PageDescription>
 
-These sites within the Carbon community include guidance, assets, and resources for all of IBM's digital
-experiences from product to website. Some guidance is accessible to IBMers only.
+These sites within the Carbon community include guidance, assets, and resources
+for all of IBM's digital experiences from product to website. Some guidance is
+accessible to IBMers only.
 
 </PageDescription>
 
