--- a/src/pages/developing/frameworks/web-components.mdx
+++ b/src/pages/developing/frameworks/web-components.mdx
@@ -80,8 +80,8 @@ Our example at [CodeSandbox](https://codesandbox.io) shows the most basic usage:
 [![Edit carbon-web-components](https://codesandbox.io/static/img/play-codesandbox.svg)](https://codesandbox.io/s/github/carbon-design-system/carbon-web-components/tree/master/examples/codesandbox/basic)
 
 The first thing you need to do is **set up a module bundler** to resolve
-ECMAScript `import`s. The above example uses [Webpack](https://webpack.js.org) but you
-can use other bundlers like [Rollup](https://rollupjs.org/) too.
+ECMAScript `import`s. The above example uses [Webpack](https://webpack.js.org)
+but you can use other bundlers like [Rollup](https://rollupjs.org/) too.
 
 Once you set up a module bundler, you can start importing our component modules,
 for example:
@@ -91,8 +91,8 @@ import 'carbon-web-components/es/components/dropdown/dropdown.js';
 import 'carbon-web-components/es/components/dropdown/dropdown-item.js';
 ```
 
-Once you've imported the component modules, you can use our components in the same manner as native HTML
-tags, for example:
+Once you've imported the component modules, you can use our components in the
+same manner as native HTML tags, for example:
 
 ```html
 <bx-dropdown trigger-content="Select an item">
