--- a/src/pages/components/number-input/style.mdx
+++ b/src/pages/components/number-input/style.mdx
@@ -67,9 +67,9 @@ phrase and any proper nouns capitalized.
 
 ## Structure
 
-The height of a number input is always the same. The width however, varies based
-on content, layout and design. The caret icon can be found in the
-[icons](/guidelines/icons/library) library.
+The height varies for small (32/2), medium (40/2.5), and large (48/3) size
+variants. The width varies based on content, layout, and design. The add and
+subtract icons can be found in the [icons](/guidelines/icons/library) library.
 
 | Class                              | Property                    | px / rem | Spacing token |
 | ---------------------------------- | --------------------------- | -------- | ------------- |
