--- a/src/pages/components/date-picker/usage.mdx
+++ b/src/pages/components/date-picker/usage.mdx
@@ -74,6 +74,7 @@ for scheduling tasks.
     id="default-datepicker"
     knobs={{
       DatePicker: ['light'],
+      DatePickerInput: ['disabled', 'invalid', 'size'],
     }}
     links={{
       React:
@@ -97,6 +98,7 @@ for scheduling tasks.
     id="single-calendar"
     knobs={{
       DatePicker: ['light'],
+      DatePickerInput: ['disabled', 'invalid', 'size'],
     }}
     links={{
       React:
@@ -120,6 +122,7 @@ for scheduling tasks.
     id="range-calendar"
     knobs={{
       DatePicker: ['light'],
+      DatePickerInput: ['disabled', 'invalid', 'size'],
     }}
     links={{
       React:
