--- a/src/pages/components/loading/code.mdx
+++ b/src/pages/components/loading/code.mdx
@@ -59,7 +59,7 @@ documentation, see the Storybooks for each framework below.
   ]}>
   <ComponentVariant
     id="loading"
-    knobs={{ Loading: ['small'] }}
+    knobs={{ Loading: ['small', 'withOverlay'] }}
     links={{
       React:
         'https://react.carbondesignsystem.com/?path=/story/components-loading--default',
