--- a/src/pages/components/loading/usage.mdx
+++ b/src/pages/components/loading/usage.mdx
@@ -43,7 +43,7 @@ three seconds.
   ]}>
   <ComponentVariant
     id="loading"
-    knobs={{ Loading: ['small'] }}
+    knobs={{ Loading: ['small', 'withOverlay'] }}
     links={{
       React:
         'https://react.carbondesignsystem.com/?path=/story/components-loading--default',
