docs: adds Gatsby theme site to Dev and Design pgs (#2277)
* docs: adds Gatsby theme site to Dev and Design pgs

* added anchor links, changed headings to h2s

Co-authored-by: Alison Joseph <alisonejoseph@Gmail.com>

--- a/src/pages/developing/dev-resources/index.mdx
+++ b/src/pages/developing/dev-resources/index.mdx
@@ -12,7 +12,16 @@ your framework of choice.
 
 </PageDescription>
 
-### GitHub repos
+<AnchorLinks>
+
+<AnchorLink>GitHub repos</AnchorLink>
+<AnchorLink>Storybooks</AnchorLink>
+<AnchorLink>Tools</AnchorLink>
+<AnchorLink>Gatsby theme resources</AnchorLink>
+
+</AnchorLinks>
+
+## GitHub repos
 
 <Row className="resource-card-group">
   <Column colLg={4} colMd={4} noGutterSm>
@@ -80,7 +89,7 @@ your framework of choice.
 </Column>
 </Row>
 
-### Storybooks
+## Storybooks
 
 <Row className="resource-card-group">
 <Column colLg={4} colMd={4} noGutterSm>
@@ -126,7 +135,7 @@ your framework of choice.
 </Column>
 </Row>
 
-### Tools
+## Tools
 
 <Row className="resource-card-group">
 <Column colLg={4} colMd={4} noGutterSm>
@@ -184,4 +193,28 @@ your framework of choice.
   </ResourceCard>
 </Column>
 
+</Row>
+
+## Gatsby theme resources
+
+<Row className="resource-card-group">
+
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    subTitle="Gatsby theme Sketch kit"
+    href="sketch://add-library/cloud/304313c1-29a8-4946-a6f0-51dbec953bc2"
+    actionIcon="download">
+    <MdxIcon name="sketch" />
+  </ResourceCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    subTitle="Gatsby theme Carbon site"
+    href="https://gatsby-theme-carbon.vercel.app/"
+    actionIcon="launch">
+
+![Gatsby icon](images/gatsby.svg)
+
+  </ResourceCard>
+</Column>
 </Row>
