update(content-switcher): update live demo props

--- a/src/pages/components/content-switcher/code.mdx
+++ b/src/pages/components/content-switcher/code.mdx
@@ -62,6 +62,7 @@ code usage documentation, see the Storybooks for each framework below.
     id="content-switcher"
     knobs={{
       Switch: ['disabled'],
+      ContentSwitcher: ['size'],
     }}
     links={{
       React:
