--- a/src/pages/components/content-switcher/usage.mdx
+++ b/src/pages/components/content-switcher/usage.mdx
@@ -75,6 +75,7 @@ binary decision.
     id="content-switcher"
     knobs={{
       Switch: ['disabled'],
+      ContentSwitcher: ['size'],
     }}
     links={{
       React:
