update the team page members (#2248)
* update the team page members

* update Cal Smith's title on the team page

* update cal smith's title

* update images on the team page

* updates to titles, alphabetized list

* page updates, new layout and labels

Co-authored-by: Jan Child <jan.child@ibm.com>
Co-authored-by: Alison Joseph <alisonejoseph@Gmail.com>

--- a/src/pages/all-about-carbon/the-team.mdx
+++ b/src/pages/all-about-carbon/the-team.mdx
@@ -1,20 +1,20 @@
 ---
 title: The Carbon team
 description:
-  Carbon is funded and built by IBM. That means we build for the company’s
-  business needs. Carbon is also an open source community-driven project. It is
-  available for anyone to use and everyone is encouraged to contribute.
+  Carbon’s designers, developers, and writers provide teams with universal
+  assets—elements, components, patterns, and code—and the guidance for how to
+  design and build with them.
 ---
 
 <PageDescription>
 
-Carbon supports its users with a dedicated team of designers, developers, and
-writers working closely to support teams across the business to be productive
-and successful in designing digital experiences and products.
+Carbon’s designers, developers, and writers provide teams with universal
+assets—elements, components, patterns, and code—and the guidance for how to
+design and build with them.
 
 </PageDescription>
 
-## The people
+## Design system
 
 <Row>
 
@@ -113,6 +113,7 @@ and successful in designing digital experiences and products.
 ![Jeannie Servaas headshot](/images/team/servaas_jean.png)
 
 </Profile>
+
 <Profile name="Scott Strubberg" title="Front-end Developer">
 
 ![Scott Strubberg headshot](/images/team/strubberg_scott.png)
@@ -121,6 +122,42 @@ and successful in designing digital experiences and products.
 <Profile name="Andrew Wang" title="Software Developer">
 
 ![Andrew Wang headshot](/images/team/wang_andrew.png)
+
+</Profile>
+</Row>
+
+## Data visualization
+
+<Row>
+
+<Profile name="Natasha Decoste" title="Software Developer">
+
+![Natasha Decoste headshot](/images/team/decoste_natasha.png)
+
+</Profile>
+<Profile name="Zvonimir Fras" title="Software Developer">
+
+![Zvonimir Fras headshot](/images/team/fras_zvonimir.png)
+
+</Profile>
+<Profile name="Nina Li" title="Project Manager">
+
+![Nina Li headshot](/images/team/li_nina.png)
+
+</Profile>
+<Profile name="Eliad Moosavi" title="Senior Software Developer, Technical Lead">
+
+![Eliad Moosavi headshot](/images/team/moosavi_eliad.png)
+
+</Profile>
+<Profile name="Cal Smith" title="Angular Technical Lead">
+
+![Cal Smith headshot](/images/team/smith_cal.png)
+
+</Profile>
+<Profile name="Dean Williams" title="Senior Development Manager">
+
+![Dean Williams headshot](/images/team/williams_dean.png)
 
 </Profile>
 </Row>
