Fix populate data table in angular tutorial
In Angular tutorial step 3, it's missing an assignment, so the data
table is not populate as it says in the tutorial.

--- a/src/pages/developing/angular-tutorial/step-3.mdx
+++ b/src/pages/developing/angular-tutorial/step-3.mdx
@@ -401,7 +401,7 @@ the data table rows.
 
 ```javascript path=src/app/repositories/repo-table/repo-table.component.ts
 // If we're here, we've got our data!
-this.prepareData(response.data.organization.repositories.nodes);
+this.model.data = this.prepareData(response.data.organization.repositories.nodes);
 ```
 
 Then, in `ngOnInit()` delete the static rows since we no longer need them.
