Fixes angular tutorial (#2291)
* Fix apollo-angular install instruction

In Angular tutorial step, specify the correct apollo-angular version
that is supported by Angular 8 and Typescript 3.5.

* Fix populate data table in angular tutorial

In Angular tutorial step 3, it's missing an assignment, so the data
table is not populate as it says in the tutorial.

* Remove yarn references from Angular tutorial

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/src/pages/developing/angular-tutorial/step-3.mdx
+++ b/src/pages/developing/angular-tutorial/step-3.mdx
@@ -122,7 +122,7 @@ Install the following
 Using the command:
 
 ```bash
-ng add apollo-angular
+ng add apollo-angular@v1
 ng lint --fix
 ```
 
@@ -401,7 +401,7 @@ the data table rows.
 
 ```javascript path=src/app/repositories/repo-table/repo-table.component.ts
 // If we're here, we've got our data!
-this.prepareData(response.data.organization.repositories.nodes);
+this.model.data = this.prepareData(response.data.organization.repositories.nodes);
 ```
 
 Then, in `ngOnInit()` delete the static rows since we no longer need them.
