docs(Modal): add solo button example to code docs

--- a/src/pages/components/modal/code.mdx
+++ b/src/pages/components/modal/code.mdx
@@ -152,6 +152,7 @@ documentation, see the Storybooks for each framework below.
       buttonTriggerText="Launch modal"
       modalHeading="Modal heading"
       modalLabel="Label"
+      secondaryButtonText={null}
     >
       <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse cursus fermentum risus, sit amet fringilla nunc pellentesque quis. Duis quis odio ultrices, cursus lacus ac, posuere felis. Donec dignissim libero in augue mattis, a molestie metus vestibulum. Aliquam placerat felis ultrices lorem condimentum, nec ullamcorper felis porttitor. </p>
     </ModalWrapper>
