copy edit tweak

--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -223,7 +223,7 @@ size. For guidance on button heights as well as type sizes and tokens, see
 | ------------------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | _Full bleed_       | Use when buttons bleed to the edge of a larger component, like side panels or modals. _Note: This variant is not offered in the kit because it does not have a coded counterpart. Carbon only offers this button in the context of the modal component._ |
 | _Default_          | Use as primary page actions and other standalone actions.                                                                                                                                                                                                |
-| _Large expressive_ | The larger expressive type size within this button provides balance when used with 16px body copy. Used by IBM.com team in website banners.                                                                                                              |
+| _Large expressive_ | The larger expressive type size within this button provides balance when used with 16px body copy. Used by the IBM.com team in website banners.                                                                                                          |
 | _Field_            | Use when buttons are paired with input fields.                                                                                                                                                                                                           |
 | _Small_            | Use when there is not enough vertical space for the default or field-sized button.                                                                                                                                                                       |
 
