docs(Modal): update action handler

--- a/src/pages/components/modal/code.mdx
+++ b/src/pages/components/modal/code.mdx
@@ -176,11 +176,11 @@ documentation, see the Storybooks for each framework below.
         [
           {
             buttonText: 'Keep both',
-            onClick: action('onClick'),
+            onClick: () => {},
           },
           {
             buttonText: 'Rename',
-            onClick: action('onClick'),
+            onClick: () => {},
           }
         ]
       }
