--- a/src/pages/components/modal/usage.mdx
+++ b/src/pages/components/modal/usage.mdx
@@ -197,11 +197,11 @@ destructive or irreversible then use a transactional danger modal.
         [
           {
             buttonText: 'Keep both',
-            onClick: action('onClick'),
+            onClick: () => {},
           },
           {
             buttonText: 'Rename',
-            onClick: action('onClick'),
+            onClick: () => {},
           }
         ]
       }
