--- a/src/pages/components/list/style.mdx
+++ b/src/pages/components/list/style.mdx
@@ -23,9 +23,9 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Typography
 
-Level 1 and 2 of any list type should be set in bold and sentence case, with
-only the first word in a phrase and any proper noun capitalized. **Line height**
-for lists should be set at 24px / 1.5rem.
+List items should use sentence case, that is, only the first word and any proper
+nouns are capitalized. In IBM product, use the 14px options below. For IBM.com,
+use the larger expressive 16px options.
 
 | Class                   | Font-size (px/rem) | Font-weight   | Type token       |
 | ----------------------- | ------------------ | ------------- | ---------------- |
