--- a/src/pages/components/list/style.mdx
+++ b/src/pages/components/list/style.mdx
@@ -23,14 +23,16 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Typography
 
-Level 1 and 2 of any list type should be set in bold and sentence case, with
-only the first word in a phrase and any proper noun capitalized. **Line height**
-for lists should be set at 24px / 1.5rem.
+List items should use sentence case, that is, only the first word and any proper
+nouns are capitalized. In IBM product, use the 14px options below. For IBM.com,
+use the larger expressive 16px options.
 
-| Class               | Font-size (px/rem) | Font-weight   | Type token       |
-| ------------------- | ------------------ | ------------- | ---------------- |
-| `.bx--list__item`   | 14 / 0.875         | Regular / 400 | `$body-short-01` |
-| `.bx--list--nested` | 14 / 0.875         | Regular / 400 | `$body-short-01` |
+| Class                   | Font-size (px/rem) | Font-weight   | Type token      |
+| ----------------------- | ------------------ | ------------- | --------------- |
+| `.bx--list__item`       | 14 / 0.875         | Regular / 400 | `$body-long-01` |
+| `.bx--list--nested`     | 14 / 0.875         | Regular / 400 | `$body-long-01` |
+| `.bx--list--lg--item`   | 16 / 1             | Regular / 400 | `$body-long-02` |
+| `.bx--list--lg--nested` | 16 / 1             | Regular / 400 | `$body-long-02` |
 
 ## Structure
 
