fix relative link

--- a/src/pages/components/overview/index.mdx
+++ b/src/pages/components/overview/index.mdx
@@ -23,6 +23,6 @@ feedback to the user, and so on. All of the components in Carbon have been
 designed to work harmoniously together, as parts of a greater whole.
 
 Additional components, maintained by the Carbon community, are available in
-[Community assets](https://www.carbondesignsystem.com/community/component-index).
+[Community assets](/community/component-index).
 
 <ComponentOverview />
