docs: component index reference (#2307)
* docs: reference to component index

* fix relative link

Co-authored-by: Alison Joseph <alisonejoseph@Gmail.com>

--- a/src/pages/components/overview/index.mdx
+++ b/src/pages/components/overview/index.mdx
@@ -22,10 +22,7 @@ as presenting a list of options, enabling submission of a form, providing
 feedback to the user, and so on. All of the components in Carbon have been
 designed to work harmoniously together, as parts of a greater whole.
 
+Additional components, maintained by the Carbon community, are available in
+[Community assets](/community/component-index).
+
 <ComponentOverview />
-
-## Community components
-
-Additional components, maintained by members of the Carbon community, are
-available in
-[Community assets](https://www.carbondesignsystem.com/community/component-index).
