--- a/src/pages/components/accordion/style.mdx
+++ b/src/pages/components/accordion/style.mdx
@@ -11,20 +11,20 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 | Class                     | Property   | Color token |
 | ------------------------- | ---------- | ----------- |
-| `.bx--accordion__title`   | color      | `$text-01`  |
-| `.bx--accordion__content` | color      | `$text-01`  |
-| `.bx--accordion__arrow`   | fill       | `$icon-01`  |
-| `.bx--accordion__item`    | border-top | `$ui-03`    |
+| `.bx--accordion__title`   | color      | `$text-primary`  |
+| `.bx--accordion__content` | color      | `$text-primary`  |
+| `.bx--accordion__arrow`   | fill       | `$icon-primary`  |
+| `.bx--accordion__item`    | border-top | `$border-subtle`    |
 
 ### Interactive states
 
 | Class                            | Property   | Color token    |
 | -------------------------------- | ---------- | -------------- |
-| `.bx--accordion__heading:hover`  | background | `$hover-ui`    |
+| `.bx--accordion__heading:hover`  | background | `$field-hover`    |
 | `.bx--accordion__title:focus`    | border     | `$focus`       |
-| `.bx--accordion__title:disabled` | background | `$disabled-02` |
-| `.bx--accordion__arrow:disabled` | fill       | `$disabled-02` |
-| `.bx--accordion__item--disabled` | border-top | `$disabled-01` |
+| `.bx--accordion__title:disabled` | background | `$text-disabled` |
+| `.bx--accordion__arrow:disabled` | fill       | `$icon-disabled` |
+| `.bx--accordion__item--disabled` | border-top | `$border-disabled` |
 
 <Row>
 <Column colLg={12}>
