--- a/src/pages/components/breadcrumb/style.mdx
+++ b/src/pages/components/breadcrumb/style.mdx
@@ -10,12 +10,12 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 | Class                                     | Property | Color token           |
 | ----------------------------------------- | -------- | --------------------- |
-| `.bx--link`                               | color    | `$link-01`            |
-| `.bx--link:hover`                         | color    | `$hover-primary-text` |
-| `.bx--link:active`                        | color    | `$text-01`            |
+| `.bx--link`                               | color    | `$link-primary`            |
+| `.bx--link:hover`                         | color    | `$link-primary-hover` |
+| `.bx--link:active`                        | color    | `$text-primary`            |
 | `.bx--link:focus`                         | outline  | `$focus`              |
-| `.bx--breadcrumb-item::after`             | color    | `$text-01`            |
-| `.bx--breadcrumb-item--current .bx--link` | color    | `$text-01`            |
+| `.bx--breadcrumb-item::after`             | color    | `$text-primary`            |
+| `.bx--breadcrumb-item--current .bx--link` | color    | `$text-primary`            |
 
 <Row>
 <Column colLg={8}>
@@ -83,8 +83,8 @@ recommended for the overflow breadcrumb list.
 
 | Class                                      | Property         | Color token |
 | ------------------------------------------ | ---------------- | ----------- |
-| `.bx--overflow-menu-options__btn`          | color            | `$icon-01`  |
-| `.bx--overflow-menu-options__option:hover` | background-color | `$hover-ui` |
+| `.bx--overflow-menu-options__btn`          | color            | `$icon-primary`  |
+| `.bx--overflow-menu-options__option:hover` | background-color | `$background-hover` |
 
 <h3
   class="AutolinkHeader-module--header--1G1tm Markdown-module--h3--Gwbvh"
