docs: v11 color token updates for data table component
This PR updates the color tokens on the Style tab for the accordion component.

--- a/src/pages/components/data-table/style.mdx
+++ b/src/pages/components/data-table/style.mdx
@@ -8,14 +8,16 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Color
 
-| Class                     | Property         | Color token |
-| ------------------------- | ---------------- | ----------- |
-| `.bx--data-table-header`  | background-color | `$ui-01`    |
-| `.bx--data-table-header`  | text color       | `$text-01`  |
-| `.bx--data-table thead`   | background-color | `$ui-03`    |
-| `.bx--table-header-label` | text color       | `$text-01`  |
-| `.bx--data-table tbody`   | background-color | `$ui-01`    |
-| `.bx--data-table td`      | text color       | `$text-02`  |
+| Element                     | Property         | Color token        |
+| --------------------------- | ---------------- | ------------------ |
+| Table header                | background-color | `$layer`           |
+| Title                       | text color       | `$text-primary`    |
+| Description                 | text color       | `$text-secondary`  |
+| Column header               | background-color | `$layer-accent`    |
+|                             | text color       | `$text-primary`    |
+| Row                         | background-color | `$layer`           |
+|                             | text color       | `$text-secondary`  |
+|                             | border-bottom    | `$border-subtle`   |
 
 <Row>
 <Column colLg={8}>
@@ -27,28 +29,28 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ### Enhancements
 
-| Class                                                                                         | Property         | Color token       |
-| --------------------------------------------------------------------------------------------- | ---------------- | ----------------- |
-| `.bx--data-table--zebra`                                                                      | background-color | –                 |
-| `.bx--expandable-row-v2`                                                                      | background-color | `$ui-01`          |
-| `.bx--table-sort-v2__icon` <br/> `.bx--table-expand-v2__svg` <br/> `.bx--overflow-menu__icon` | fill             | `$icon-01`        |
-| `.bx--batch-actions--active`                                                                  | background-color | `$interactive-01` |
-| `.bx--batch-summary__para`                                                                    | background-color | `$text-04`        |
-| `.bx--batch-actions .bx--btn`                                                                 | text-color       | `$text-04`        |
-| `.bx--overflow-menu-options`                                                                  | text-color       | `$text-02`        |
-| `.bx--overflow-menu-options`                                                                  | background color | `$ui-02`          |
+| Element                           | Property         | Color token         |
+| --------------------------------- | ---------------- | ------------------- |
+| Zebra row                         | background-color | `$layer-accent`     |
+| Expanded row                      | background-color | `$layer`            |
+| Sort <br/> Chevron <br/> Overflow | svg              | `$icon-primary`     |
+| Batch action bar                  | background-color | `$background-brand` |
+|                                   | text color       | `$text-on-color`    |
+|                                   | svg              | `icon-on-color`     |
+| Overflow menu                     | background-color | `$layer-accent`     |
+|                                   | text color       | `$text-secondary`   |
 
 ### Interactive states
 
-| Class                               | Property         | Color token          |
-| ----------------------------------- | ---------------- | -------------------- |
-| `.bx--data-table tr:hover td`       | background-color | `$hover-ui`          |
-| `.bx--data-table td:hover`          | text color       | `$text-01`           |
-| `.bx--data-table td:focus`          | border           | `$focus`             |
-| `.bx--data-table--selected`         | background-color | `$selected-ui`       |
-| `.bx--data-table--selected td`      | text color       | `$text-01`           |
-| `.bx--data-table--selected:hover`   | background-color | `$hover-selected-ui` |
-| `.bx--batch-actions .bx--btn:hover` | background color | `$hover-primary`     |
+| Element                             | Property         | Color token                  |
+| ----------------------------------- | ---------------- | ---------------------------- |
+| Row: hover                          | background-color | `$background-hover`          |
+|                                     | text color       | `$text-primary`              |
+| Row: focus                          | border           | `$focus`                     |
+| Row: selected                       | background-color | `$layer-selected`            |
+|                                     | text color       | `$text-primary`              |
+| Row: selected + hover               | background-color | `$background-selected-hover` |
+| Button: hover                       | background color | `$button-primary-hover`      |
 
 <Row>
 <Column colLg={8}>
