docs(loading): v11 color token updates
This PR updates the color tokens on the style tab for the loading component.

--- a/src/pages/components/loading/style.mdx
+++ b/src/pages/components/loading/style.mdx
@@ -8,11 +8,11 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Color
 
-| Class                  | Property         | Color token         |
-| ---------------------- | ---------------- | ------------------- |
-| `.bx--loading__svg`    | stroke           | `$interactive-04`   |
-| `.bx--loading--small`  | stroke           | `$interactive-04`   |
-| `.bx--loading-overlay` | background-color | `rgba($ui-02, 0.6)` |
+| Class                  | Property         | Color token    |
+| ---------------------- | ---------------- | -------------- |
+| `.bx--loading__svg`    | stroke           | `$interactive` |
+| `.bx--loading--small`  | stroke           | `$interactive` |
+| `.bx--loading-overlay` | background-color | `$overlay'     |
 
 ## Structure
 
