docs(modal): v11 color token updates
This PR updates the color tokens on the style tab for the modal component.

--- a/src/pages/components/modal/style.mdx
+++ b/src/pages/components/modal/style.mdx
@@ -11,15 +11,15 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 Refer to the [button](/components/button/style) for primary and secondary button
 styling in the transactional modal.
 
-| Class                        | Property         | Color token   |
-| ---------------------------- | ---------------- | ------------- |
-| `.bx--modal-container`       | background-color | `$ui-01`      |
-| `.bx--modal-header__label`   | text color       | `$text-02`    |
-| `.bx--modal-header__heading` | text color       | `$text-01`    |
-| `.bx--modal-content`         | text color       | `$text-01`    |
-| `.bx--modal-close__icon`     | fill             | `$icon-01`    |
-| `.bx--modal-close:hover`     | background-color | `$hover-ui`   |
-| Overlay                      | color            | `$overlay-01` |
+| Class                        | Property         | Color token         |
+| ---------------------------- | ---------------- | ------------------- |
+| `.bx--modal-container`       | background-color | `$layer`            |
+| `.bx--modal-header__label`   | text color       | `$text-secondary`   |
+| `.bx--modal-header__heading` | text color       | `$text-primary`     |
+| `.bx--modal-content`         | text color       | `$text-primary`     |
+| `.bx--modal-close__icon`     | fill             | `$icon-primary`     |
+| `.bx--modal-close:hover`     | background-color | `$background-hover` |
+| Overlay                      | color            | `$overlay`          |
 
 ## Typography
 
