update: enhancment icons

--- a/src/pages/components/data-table/style.mdx
+++ b/src/pages/components/data-table/style.mdx
@@ -29,16 +29,18 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ### Enhancements
 
-| Element                           | Property         | Color token         |
-| --------------------------------- | ---------------- | ------------------- |
-| Zebra row                         | background-color | `$layer-accent`     |
-| Expanded row                      | background-color | `$layer`            |
-| Sort <br/> Chevron <br/> Overflow | svg              | `$icon-primary`     |
-| Batch action bar                  | background-color | `$background-brand` |
-|                                   | text color       | `$text-on-color`    |
-|                                   | svg              | `icon-on-color`     |
-| Overflow menu                     | background-color | `$layer-accent`     |
-|                                   | text color       | `$text-secondary`   |
+| Element          | Property         | Color token         |
+| ---------------- | ---------------- | ------------------- |
+| Zebra row        | background-color | `$layer-accent`     |
+| Expanded row     | background-color | `$layer`            |
+| Sort             | svg              | `$icon-primary`     |
+| Chevron          | svg              | `$icon-primary`     |
+| Overflow         | svg              | `$icon-primary`     |
+| Batch action bar | background-color | `$background-brand` |
+|                  | text color       | `$text-on-color`    |
+|                  | svg              | `icon-on-color`     |
+| Overflow menu    | background-color | `$layer-accent`     |
+|                  | text color       | `$text-secondary`   |
 
 ### Interactive states
 
