--- a/src/pages/components/checkbox/style.mdx
+++ b/src/pages/components/checkbox/style.mdx
@@ -10,12 +10,12 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 | Class                     | Property         | Color token   |
 | ------------------------- | ---------------- | ------------- |
-| `.bx--label`              | text color       | `$text-02`    |
-| `.bx--checkbox-label`     | text color       | `$text-01`    |
-| `.bx--checkbox`           | border           | `$icon-01`    |
+| `.bx--label`              | text color       | `$text-secondary`    |
+| `.bx--checkbox-label`     | text color       | `$text-primary`      |
+| `.bx--checkbox`           | border           | `$icon-primary`      |
 | `.bx--checkbox:unchecked` | background-color | transparent   |
-| `.bx--checkbox:checked`   | background-color | `$icon-01`    |
-| `.bx--checkbox:checked`   | checkmark        | `$inverse-01` |
+| `.bx--checkbox:checked`   | background-color | `$icon-primary`      |
+| `.bx--checkbox:checked`   | checkmark        | `$text-inverse`      |
 
 <Row>
 <Column colLg={8}>
@@ -30,8 +30,8 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | State       | Property   | Color token    |
 | ----------- | ---------- | -------------- |
 | `:focus`    | border     | `$focus`       |
-| `:disabled` | text color | `$disabled-02` |
-| `:disabled` | border     | `$disabled-02` |
+| `:disabled` | text color | `$text-disabled` |
+| `:disabled` | border     | `$icon-disabled` |
 
 <Row>
 <Column colLg={8}>
