--- a/src/pages/components/loading/style.mdx
+++ b/src/pages/components/loading/style.mdx
@@ -12,7 +12,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | ---------------------- | ---------------- | -------------- |
 | `.bx--loading__svg`    | stroke           | `$interactive` |
 | `.bx--loading--small`  | stroke           | `$interactive` |
-| `.bx--loading-overlay` | background-color | `$overlay'     |
+| `.bx--loading-overlay` | background-color | `$overlay`     |
 
 ## Structure
 
