--- a/src/pages/components/button/style.mdx
+++ b/src/pages/components/button/style.mdx
@@ -14,11 +14,11 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | ------------------- | ---------------- | ----------------- |
 | `.bx--btn--primary` | text color       | `$text-on-color`  |
 | `.bx--btn__icon`    | svg              | `$icon-on-color`  |
-| `.bx--btn--primary` | background-color | `$background-brand`      |
+| `.bx--btn--primary` | background-color | `$button-primary`      |
 | `:hover`            | background-color | `$button-primary-hover`  |
 | `:active`           | background-color | `$button-primary-active` |
 | `:focus`            | border           | `$focus`          |
-| `:focus`            | inset            | `$background`     |
+| `:focus`            | inset            | `$focus-inset`     |
 | `:disabled`         | background-color | `$button-disabled`|
 | `:disabled`         | text color       | `$text-on-color-disabled`|
 | `:disabled`         | svg              | `$icon-on-color-disabled`|
@@ -42,7 +42,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | `:hover`              | background-color | `$button-secondary-hover`  |
 | `:active`             | background-color | `$button-secondary-active` |
 | `:focus`              | border           | `$focus`            |
-| `:focus`              | inset            | `$background`       |
+| `:focus`              | inset            | `$focus-inset`       |
 | `:disabled`           | background-color | `$button-disabled`  |
 | `:disabled`           | text color       | `$text-on-color-disabled`  |
 | `:disabled`           | svg              | `$icon-on-color-disabled`  |
@@ -63,17 +63,17 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | `.bx--btn__icon`     | svg              | `$button-tertiary` |
 | `.bx--btn--tertiary` | background-color | `transparent`      |
 | `.bx--btn--tertiary` | border           | `$button-tertiary` |
-| `:hover`             | text color       | `$button-tertiary` |
+| `:hover`             | text color       | `$text-on-color` |
 | `:hover`             | svg              | `$icon-on-color`   |
-| `:hover`             | background-color | `$hover-tertiary`  |
-| `:active`            | background-color | `$active-tertiary` |
-| `:focus`             | background-color | `$interactive-03`  |
+| `:hover`             | background-color | `$button-tertiary-hover`  |
+| `:active`            | background-color | `$button-tertiary-active` |
+| `:focus`             | background-color | `$button-tertiary-hover`  |
 | `:focus`             | border           | `$focus`           |
-| `:focus`             | inset            | `$ui-background`   |
+| `:focus`             | inset            | `$focus-inset`   |
 | `:disabled`          | background       | `transparent`      |
-| `:disabled`          | border           | `$disabled-02`     |
+| `:disabled`          | border           | `$button-disabled`     |
 | `:disabled`          | text color       | `$text-on-color-disabled`  |
-| `:disabled`          | svg              | `$icon-disabled`   |
+| `:disabled`          | svg              | `$icon-on-color-disabled`   |
 
 <Row>
 <Column colLg={8}>
@@ -92,10 +92,10 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | `.bx--btn--ghost` | background-color | –                     |
 | `:hover`          | text color       | `$link-primary-hover` |
 | `:hover`          | svg              | `$link-primary-hover` |
-| `:hover`          | background-color | `$layer-hover`        |
+| `:hover`          | background-color | `$background-hover`        |
 | `:active`         | background-color | `$background-active`  |
 | `:focus`          | border           | `$focus`              |
-| `:disabled`       | text color       | `$text-on-color-disabled`     |
+| `:disabled`       | text color       | `$text-disabled`     |
 | `:disabled`       | svg              | `$icon-disabled`      |
 
 <Row>
@@ -116,7 +116,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | `:hover`                    | background-color | `$button-danger-hover`       |
 | `:active`                   | background-color | `$button-danger-active`      |
 | `:focus`                    | border           | `$focus`         |
-| `:focus`                    | inset            | `$background`    |
+| `:focus`                    | inset            | `$focus-inset`    |
 | `:disabled`                 | background-color | `$button-disabled`           |
 | `:disabled`                 | text color       | `$text-on-color-disabled`    |
 | `:disabled`                 | svg              | `$icon-on-color-disabled`    | 
@@ -143,7 +143,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | `:active`                    | text color       | `$text-on-color` |
 | `:active`                    | svg              | `$icon-on-color` |
 | `:focus`                     | border           | `$focus`         |
-| `:focus`                     | inset            | `$background` |
+| `:focus`                     | inset            | `$focus-inset` |
 | `:disabled`                  | background-color | `$button-disabled`          |
 | `:disabled`                  | text color       | `$text-on-color-disabled`   |
 | `:disabled`                  | svg              | `$icon-on-color-disabled`   |
@@ -169,7 +169,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | `:active`                 | text color       | `$text-on-color` |
 | `:active`                 | svg              | `$icon-on-color` |
 | `:focus`                  | border           | `$focus`         |
-| `:focus`                  | inset            | `$background`    |
+| `:focus`                  | inset            | `$focus-inset`    |
 | `:disabled`               | background-color | `$button-disabled`             |
 | `:disabled`               | text color       | `$text-on-color-disabled`      |
 | `:disabled`               | svg              | `$icon-on-color-disabled`      |
