--- a/src/pages/components/content-switcher/style.mdx
+++ b/src/pages/components/content-switcher/style.mdx
@@ -15,9 +15,10 @@ contrast color.
 
 | Class                       | Property         | Color token          |
 | --------------------------- | ---------------- | -------------        | 
-| `.bx--content-switcher-btn` | background-color | `$layer`             |
+| `.bx--content-switcher-btn` | background-color | `transparent`             |
 | `.bx--content-switcher-btn` | text color       | `$text-secondary`    |
-| `--selected`                | background-color | `$border-inverse`    |
+| `.bx--content-switcher-btn` | border           | `$border-inverse`    |
+| `--selected`                | background-color | `$layer-selected-inverse`    |
 | `--selected`                | text color       | `$text-inverse`      |
 | `:after`                    | divider          | `$border-subtle`     |
 
@@ -30,8 +31,9 @@ Hover states only apply to `unselected` buttons.
 | `:hover`    | background-color | `$background-hover`    |
 | `:hover`    | text color       | `$text-primary`        |
 | `:focus`    | border           | `$focus`               |
-| `:disabled` | background-color | `$layer-disabled`      |
+| `:disabled` | background-color | `transparent`      |
 | `:disabled` | text color       | `$text-disabled`       |
+| `:disabled` | border           | `$border-disabled`       |
 
 <Row>
 <Column colLg={8}>
