--- a/src/pages/components/data-table/style.mdx
+++ b/src/pages/components/data-table/style.mdx
@@ -29,30 +29,30 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ### Enhancements
 
-| Element          | Property         | Color token         |
-| ---------------- | ---------------- | ------------------- |
-| Zebra row        | background-color | `$layer-accent`     |
-| Expanded row     | background-color | `$layer`            |
-| Sort             | svg              | `$icon-primary`     |
-| Chevron          | svg              | `$icon-primary`     |
-| Overflow         | svg              | `$icon-primary`     |
-| Batch action bar | background-color | `$background-brand` |
-|                  | text color       | `$text-on-color`    |
-|                  | svg              | `icon-on-color`     |
-| Overflow menu    | background-color | `$layer-accent`     |
-|                  | text color       | `$text-secondary`   |
+| Element          | Property         | Color token                     |
+| ---------------- | ---------------- | ------------------------------- |
+| Zebra row        | background-color | `$layer-accent`                 |
+| Expanded row     | background-color | `$layer`                        |
+| Sort             | svg              | `$icon-primary`                 |
+| Chevron          | svg              | `$icon-primary`                 |
+| Overflow         | svg              | `$icon-primary`                 |
+| Batch action bar | background-color | `$background-brand`             |
+|                  | text color       | `$text-on-color`                |
+|                  | svg              | `icon-on-color`                 |
+| Overflow menu    | background-color | `$layer: inline theme`          |
+|                  | text color       | `$text-secondary: inline theme` |
 
 ### Interactive states
 
-| Element               | Property         | Color token                  |
-| --------------------- | ---------------- | ---------------------------- |
-| Row: hover            | background-color | `$background-hover`          |
-|                       | text color       | `$text-primary`              |
-| Row: focus            | border           | `$focus`                     |
-| Row: selected         | background-color | `$layer-selected`            |
-|                       | text color       | `$text-primary`              |
-| Row: selected + hover | background-color | `$background-selected-hover` |
-| Button: hover         | background color | `$button-primary-hover`      |
+| Element               | Property         | Color token             |
+| --------------------- | ---------------- | ----------------------- |
+| Row: hover            | background-color | `$layer-hover`          |
+|                       | text color       | `$text-primary`         |
+| Row: focus            | border           | `$focus`                |
+| Row: selected         | background-color | `$layer-selected`       |
+|                       | text color       | `$text-primary`         |
+| Row: selected + hover | background-color | `$layer-selected-hover` |
+| Button: hover         | background-color | `$button-primary-hover` |
 
 <Row>
 <Column colLg={8}>
