update: description for ghost button

--- a/src/pages/components/data-table/style.mdx
+++ b/src/pages/components/data-table/style.mdx
@@ -43,6 +43,8 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 |                  | text color       | `$text-secondary: inline theme` |
 
 ### Interactive states
+Refer to the [ghost button](https://carbondesignsystem.com/components/button/style#ghost-button) for button
+styling in the batch action bar.
 
 | Element               | Property         | Color token             |
 | --------------------- | ---------------- | ----------------------- |
@@ -52,7 +54,6 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | Row: selected         | background-color | `$layer-selected`       |
 |                       | text color       | `$text-primary`         |
 | Row: selected + hover | background-color | `$layer-selected-hover` |
-| Button: hover         | background-color | `$button-primary-hover` |
 
 <Row>
 <Column colLg={8}>
