--- a/src/pages/components/overflow-menu/style.mdx
+++ b/src/pages/components/overflow-menu/style.mdx
@@ -13,7 +13,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | `.bx--overflow-menu__icon`                   | fill             | `$icon-primary`                  |
 | `.bx--overflow-menu-options`                 | background-color | `$layer`                         |
 | `.bx--overflow-menu-options__btn`            | color            | `$text-secondary`                |
-| `.bx--overflow-menu-options__option--danger` | background-color | `$support-error`                 |
+| `.bx--overflow-menu-options__option--danger` | background-color | `$layer`                         |
 | `.bx--overflow-menu-options`                 | box-shadow       | `0 2px 6px 0 rgba(0, 0, 0, 0.3)` |
 
 ### Interactive states
@@ -23,7 +23,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | `.bx--overflow-menu:focus` | border           | `$focus`               |
 | `option:focus`             | border           | `$focus`               |
 | `.bx--overflow-menu:hover` | background-color | `$background-hover`    |
-| `option:hover`             | background-color | `$background-hover`    |
+| `option:hover`             | background-color | `$layer-hover`         |
 | `option:hover`             | text color       | `$text-primary`        |
 | `option--danger:hover`     | background-color | `$button-danger-hover` |
 | `option:disabled`          | text color       | `$text-disabled`       |
