v11 color token updates for search component
This PR updates the color tokens on the Style tab for the search component.

--- a/src/pages/components/search/style.mdx
+++ b/src/pages/components/search/style.mdx
@@ -14,12 +14,12 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 
 | Class                            | Property         | Color token |
 | -------------------------------- | ---------------- | ----------- |
-| `.bx--search-input`              | background-color | `$field-01` |
-| `.bx--search--light`             | background-color | `$field-02` |
-| `.bx--search-input`              | border-bottom    | `$ui-04`    |
-| `.bx--search-input`              | text color       | `$text-01`  |
-| `.bx--search-input::placeholder` | text color       | `$text-03`  |
-| `.bx--search-magnifier`          | fill             | `$icon-02`  |
+| `.bx--search-input`              | background-color | `$field` |
+| `.bx--search--light`             | background-color | `$background: inline theme` |
+| `.bx--search-input`              | border-bottom    | `$border-strong`    |
+| `.bx--search-input`              | text color       | `$text-primary`  |
+| `.bx--search-input::placeholder` | text color       | `$text-placeholder`  |
+| `.bx--search-magnifier`          | fill             | `$icon-secondary`  |
 
 <div className="image--fixed">
 
@@ -34,9 +34,9 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 | Class                            | Property         | Color token    |
 | -------------------------------- | ---------------- | -------------- |
 | `.bx--search-input:focus`        | border           | `$focus`       |
-| `.bx--search-input:disabled`     | background-color | `$disabled-01` |
-| `.bx--search-input:disabled`     | text color       | `$disabled-02` |
-| `.bx--search-magnifier:disabled` | fill             | `$disabled-02` |
+| `.bx--search-input:disabled`     | background-color | `$field` |
+| `.bx--search-input:disabled`     | text color       | `$text-disabled` |
+| `.bx--search-magnifier:disabled` | fill             | `$icon-disabled` |
 
 <div className="image--fixed">
 
