--- a/src/pages/components/slider/style.mdx
+++ b/src/pages/components/slider/style.mdx
@@ -10,22 +10,22 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 | Class                       | Property         | Color token |
 | --------------------------- | ---------------- | ----------- |
-| `.bx--slider__thumb`        | fill             | `$ui-05`    |
-| `.bx--slider__filled-track` | background-color | `$ui-05`    |
-| `.bx--slider__track`        | background-color | `$ui-03`    |
-| `.bx--label`                | text color       | `$text-02`  |
-| `.bx--slider__range-label`  | text color       | `$text-01`  |
+| `.bx--slider__thumb`        | fill             | `$icon-primary`    |
+| `.bx--slider__filled-track` | background-color | `$border-inverse`    |
+| `.bx--slider__track`        | background-color | `$border-subtle`    |
+| `.bx--label`                | text color       | `$text-secondary`  |
+| `.bx--slider__range-label`  | text color       | `$text-primary`  |
 
 ### Interactive states
 
 | Class                              | Property         | Color token       |
 | ---------------------------------- | ---------------- | ----------------- |
 | `.bx--slider__thumb:focus`         | border           | `$focus`          |
-| `.bx--slider__thumb:active`        | fill             | `$interactive-04` |
-| `.bx--slider__filled-track:active` | background-color | `$interactive-04` |
-| `.bx--label:disabled`              | text color       | `$disabled-02`    |
-| `.bx--slider__thumb:disabled`      | fill             | `$disabled-02`    |
-| `.bx--slider__track:disabled`      | background-color | `$disabled-02`    |
+| `.bx--slider__thumb:active`        | fill             | `$interactive` |
+| `.bx--slider__filled-track:active` | background-color | `$interactive` |
+| `.bx--label:disabled`              | text color       | `$text-disabled`    |
+| `.bx--slider__thumb:disabled`      | fill             | `$icon-disabled`    |
+| `.bx--slider__track:disabled`      | background-color | `$border-disabled`    |
 
 ## Typography
 
